--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ FodyWeavers.xsd
 /DoctorsLog/Services/Migrations
 /DoctorsLog/Migrations
 /DoctorsLog/Services/Persistence/Migrations
+/DoctorsLog/Resources/appsettings.Development.json
