--- a/.gitignore
+++ b/.gitignore
@@ -364,4 +364,4 @@ FodyWeavers.xsd
 /DoctorsLog/Services/Migrations
 /DoctorsLog/Migrations
 /DoctorsLog/Services/Persistence/Migrations
-/DoctorsLog/Resources/appsettings.Development.json
+/DoctorsLog/appsettings.Development.json
